# klip

./: .commitlintrc.json  .gitignore  AGENTS.md  CONSTITUTION.md  DEVELOPMENT.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  playwright.desktop.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md  release-notes-template.md
.husky/: commit-msg
docs/: SPEC.md  testing-strategy.md
scripts/: build.mjs  cargo-check.mjs  health-check.sh  test-coverage.mjs  test-desktop.sh  test-e2e.mjs  test.mjs  typecheck.mjs  validate-commit-message.mjs  verify-ai-code.sh
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-template.rgba
src-tauri/src/: clipboard.rs  clipboard_listener.rs  commands.rs  direct_paste.rs  history_model.rs  history_repository.rs  history_storage.rs  hotkey.rs  lib.rs  main.rs  panel_presenter.rs  startup_launch.rs  test_commands.rs  tray.rs
src-tauri/src/panel_presenter/: macos.rs  windows.rs
tests/: appium-popup.test.ts  autoCommit.test.ts  browserClipboard.test.ts  buildInfo.test.ts  clipboardMonitor.test.ts  directPasteFeedback.test.ts  directPasteRuntime.test.ts  health-check.test.ts  historyExport.test.ts  historyImport.test.ts  historyIntegrity.test.ts  historyRepository.test.ts  historyRepositoryUtils.test.ts  historySearch.test.ts  historyStats.test.ts  historyStorage.test.ts  historyUtils.test.ts  historyValidation.test.ts  historyValidationPerformance.test.ts  hotkeyConstants.test.ts  hotkeyRuntime.test.ts  logger.test.ts  loggerPerformance.test.ts  panelHotkeyDisplay.test.ts  panelHotkeyStorage.test.ts  pasteModeStorage.test.ts  popupMenuModel.test.ts  (+9 more)
(+67 files in other folders)
