[package]
name = "klip-tauri"
version = "0.1.0"
edition = "2021"
description = "Klip desktop backend scaffold"
license = "MIT"

[lib]
name = "klip_tauri_lib"
path = "src/lib.rs"

[[bin]]
name = "klip-tauri"
path = "src/main.rs"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
thiserror = "2.0.16"
time = { version = "=0.3.36", default-features = false }
time-core = "=0.1.2"
time-macros = "=0.2.18"
uuid = "=1.8.0"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
